[package]
name = "chksum"
version = "0.2.0"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.65.0"
description = "High-level interface for easy calculation of checksum digest for files, directories, stdin and more."
readme = ".cargo/README.md"
repository = "https://github.com/ferric-bytes/chksum"
license = "MIT"
keywords = []
categories = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-hash = { version = "0.4.1", default-features = false, features = ["error"] }
is-terminal = "0.4.9"
thiserror = "1.0.44"

[dev-dependencies]
assert_fs = "1.0.13"
thiserror = "1.0.44"

[build-dependencies]
anyhow = "1.0.65"
chksum-build = { version = "0.0.3", default-features = false, features = ["script"] }

[features]
default = ["inline", "md5", "sha1", "sha2"]
inline = ["chksum-hash/inline"]
md5 = ["chksum-hash/md5"]
sha1 = ["chksum-hash/sha1"]
sha2 = ["sha2-224", "sha2-256", "sha2-384", "sha2-512", "chksum-hash/sha2"]
sha2-224 = ["chksum-hash/sha2-224"]
sha2-256 = ["chksum-hash/sha2-256"]
sha2-384 = ["chksum-hash/sha2-384"]
sha2-512 = ["chksum-hash/sha2-512"]
