[package]
name = "chksum"
version = "0.3.0"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.70.0"
description = "An implementation of hash functions with a straightforward interface for computing digests of bytes, files, directories, and more."
readme = ".cargo/README.md"
repository = "https://github.com/chksum-rs/lib"
license = "MIT"
keywords = ["checksum", "hash", "directory-checksum", "file-checksum", "stdin-checksum"]
categories = ["algorithms", "cryptography", "filesystem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-core = "0.0.0"
chksum-hash = { version = "0.5.0", default-features = false }
chksum-md5 = { version = "0.0.0", optional = true }
chksum-sha1 = { version = "0.0.0", optional = true }
chksum-sha2 = { version = "0.0.0", default-features = false, optional = true }
chksum-reader = { version = "0.0.0", optional = true }
chksum-writer = { version = "0.0.0", optional = true }

[features]
default = [
    # algorithms
    "md5", "sha1", "sha2",
]

# algorithms
md5 = ["chksum-md5", "chksum-hash/md5"]
sha1 = ["chksum-sha1", "chksum-hash/sha1"]
sha2 = ["sha2-224", "sha2-256", "sha2-384", "sha2-512", "chksum-hash/sha2"]
sha2-224 = ["chksum-sha2/224", "chksum-hash/sha2-224"]
sha2-256 = ["chksum-sha2/256", "chksum-hash/sha2-256"]
sha2-384 = ["chksum-sha2/384", "chksum-hash/sha2-384"]
sha2-512 = ["chksum-sha2/512", "chksum-hash/sha2-512"]

# extra options
reader = ["chksum-reader", "chksum-md5?/reader", "chksum-sha1?/reader", "chksum-sha2?/reader"]
writer = ["chksum-writer", "chksum-md5?/writer", "chksum-sha1?/writer", "chksum-sha2?/writer"]
